fix: 修复 jjwt API 兼容性与空安全警告
- RateLimitHandler: 使用 Objects.requireNonNull 消除空类型安全警告
- JwtKeyRotationService: jjwt API 版本兼容修复
  * Jwts.SIG → KeyPairGenerator 直接生成 RSA 密钥
  * parser().verifyWith() → parserBuilder().setSigningKey()
  * builder().claims() → builder().setClaims()